# time-dynamic-island

./: .gitignore  BUILD.md  BUILD_COMPLETE_SUMMARY.md  BUILD_CONFIG.md  BUILD_SUMMARY.md  CMakeLists.txt  COMPILE_REPORT.md  DynamicIsland.vcxproj  FINAL_VERSION.md  GIT_GUIDE.md  GIT_SETUP_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  UPDATE_v3.md  USAGE_GUIDE.md  build.bat  build.ps1  build_simple.bat  compile.ps1  compile_debug.ps1  compile_only.ps1  compile_simple.ps1  link.bat  link.ps1  verify_build.ps1
.trae/documents/: 灵动岛实现计划.md
docs/: DESCRIPTION.md
include/: AntiCheatEvasion.h  InteractionHandler.h  Renderer.h  StartupManager.h  ThemeMonitor.h  TimeService.h  WindowManager.h  actions.h  animation.h  app_state.h  layout.h  rendering.h  settings.h  time_theme.h  utils.h
resources/: DynamicIsland.rc  app.manifest  app.rc  resource.h  test.rc
src/: AntiCheatEvasion.cpp  InteractionHandler.cpp  Renderer.cpp  StartupManager.cpp  ThemeMonitor.cpp  TimeService.cpp  WindowManager.cpp  actions.cpp  animation.cpp  app_state.cpp  layout.cpp  main.cpp  main_debug.cpp  rendering.cpp  settings.cpp  time_theme.cpp  utils.cpp
